<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synq</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login_with_password">Login!</string>
    <string name="password">Password</string>
    <string name="username">Email ID</string>
    <string name="newacc">Register</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile No</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_authenticated">Authenticated</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_users_list">UsersList</string>

</resources>
